refactor(frontend) Update index.html

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <h1>Hello, DevOps!</h1>
+    <h3>Visit my portfolio site <a href="https://uj5ghare.github.io">here</a></h3>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
